removed overflow bug

--- a/styles/styles_w.css
+++ b/styles/styles_w.css
@@ -71,7 +71,6 @@ li {
     border-style: solid;
     border-bottom-width: 0px;
     border-color: #242424;
-    overflow-y: scroll;
     height: 30px;
     z-index: 100;
     display: none;
